tests/baselines/reference/computedPropertyNames19_ES5.errors.txt
computedPropertyNames19_ES5.ts(3,10): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== computedPropertyNames19_ES5.ts (1 errors) ====
    module M {
        var obj = {
            [this.bar]: 0
             ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
        }
    }